correct bg first screen

--- a/index.html
+++ b/index.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
+    <div class="main">
+        <header>
+            <div class="container">
+                <nav>
+                    <div class="nav-content">
+                        <a href="#" class="nav-text">HOME</a>
+                        <a href="#" class="nav-text">ABOUT</a>
+                        <a href="#" class="nav-text">TEAM</a>
+                        <a href="#" class="nav-text">BOOKING</a>
+                    </div>
+                    <a href="#" class="logo">
+                        <img src="./img/logo.png" alt="logo">
+                    </a>
+                    <div class="nav-content">
+                        <a href="#" class="nav-text">MENU</a>
+                        <a href="#" class="nav-text">GALERIE</a>
+                        <a href="#" class="nav-text">EVENTS</a>
+                        <a href="#" class="nav-text">CONTACT</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+    
         <div class="container">
-            <nav>
-                <div class="nav-left">
-                    <a href="#" class="nav-text">HOME</a>
-                    <a href="#" class="nav-text">ABOUT</a>
-                    <a href="#" class="nav-text">TEAM</a>
-                    <a href="#" class="nav-text">BOOKING</a>
-                </div>
-                <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
-                </a>
-                <div class="nav-right">
-                    <a href="#" class="nav-text">MENU</a>
-                    <a href="#" class="nav-text">GALERIE</a>
-                    <a href="#" class="nav-text">EVENTS</a>
-                    <a href="#" class="nav-text">CONTACT</a>
-                </div>
-            </nav>
-
-            <div class="main">
+            <div class="main-content">
                 <div class="work-time"></div>
                 <div class="main-items">
-                    <h4>RESTAURANT</h4>
-                    <h1>HUNGRY PEOPLE</h1>
+                    <h2>RESTAURANT</h2>
+                    <h1 class="main-h1">HUNGRY PEOPLE</h1>
                     <div class="buttons">
                         <button>BOOK TABLE</button>
                         <button>EXPLORE</button>
@@ -40,7 +44,7 @@
                 <div class="social"></div>
             </div>
         </div>
-    </header>
+    </div>
 
     <script src="./script.js"></script>
 </body>
