--- a/index.html
+++ b/index.html
@@ -4,48 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunger</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="main">
-        <header>
-            <div class="container">
-                <nav>
-                    <div class="nav-content">
-                        <a href="#" class="nav-text">HOME</a>
-                        <a href="#" class="nav-text">ABOUT</a>
-                        <a href="#" class="nav-text">TEAM</a>
-                        <a href="#" class="nav-text">BOOKING</a>
-                    </div>
-                    <a href="#" class="logo">
-                        <img src="./img/logo.png" alt="logo">
-                    </a>
-                    <div class="nav-content">
-                        <a href="#" class="nav-text">MENU</a>
-                        <a href="#" class="nav-text">GALERIE</a>
-                        <a href="#" class="nav-text">EVENTS</a>
-                        <a href="#" class="nav-text">CONTACT</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
-    
-        <div class="container">
-            <div class="main-content">
-                <div class="work-time"></div>
-                <div class="main-items">
-                    <h2>RESTAURANT</h2>
-                    <h1 class="main-h1">HUNGRY PEOPLE</h1>
-                    <div class="buttons">
-                        <button>BOOK TABLE</button>
-                        <button>EXPLORE</button>
-                    </div>
-                </div>
-                <div class="social"></div>
-            </div>
-        </div>
-    </div>
 
-    <script src="./script.js"></script>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="nav__content">
+                    <a href="#" class="nav__item">HOME</a>
+                    <a href="#" class="nav__item">ABOUT</a>
+                    <a href="#" class="nav__item">TEAM</a>
+                    <a href="#" class="nav__item">BOOKING</a>
+                </div>
+                <a href="#" class="logo">
+                    <img src="./img/logo.png" alt="logo">
+                </a>
+                <div class="nav__content">
+                    <a href="#" class="nav__item">MENU</a>
+                    <a href="#" class="nav__item">GALERIE</a>
+                    <a href="#" class="nav__item">EVENTS</a>
+                    <a href="#" class="nav__item">CONTACT</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <section class="promo">
+        <div class="container">
+
+        </div>
+    </section>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
